--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 #title {
     background-color: #5FCF80;
     text-align: center;
-    border-radius: 10%;
+    border-radius: 10px;
     font-size: 32px;
 }
 
@@ -54,7 +54,7 @@ fieldset {
 #click input{
     background-color: #4BC970;
     text-align: center;
-    border-radius: 10%;
+    border-radius: 10px;
     width: 100%;
     height: 50px;
     color: white;
